[web] Add: Fix header icon align in Safari bug

--- a/source/web/src/static/styles/project/siteHeader.less
+++ b/source/web/src/static/styles/project/siteHeader.less
@@ -33,7 +33,7 @@
                 text-decoration:none;
                 padding-right:20px;
                 border-right:1px solid #555;
-
+                vertical-align:middle;
                 &:hover {
                     color:@light-color;
                 }
@@ -54,6 +54,7 @@
                 display:inline-block;
                 overflow:hidden;
                 text-align:center;
+                vertical-align:middle;
                 img {
                     margin-top:6px;
                 }
@@ -66,6 +67,7 @@
                 line-height:32px;
                 display:inline-block;
                 overflow:hidden;
+                vertical-align:middle;
                 img {
                     vertical-align:middle;
 
